# repairgraph

./: .gitignore  README.md  TEST_RESULTS.md  pyproject.toml  spatial-topology-summary.md
data/: active_vehicle.json
docs/: ARCHITECTURAL_PRINCIPLES.md  COMPILER_ARCHITECTURE.md  COMPILER_MODEL.md  DATA_HANDLING_POLICY.md  EVIDENCE_MODEL.md  EXECUTION_PACKAGE.md  EXTRACTION_LIMITATIONS.md  GOLDEN_PATH_DEMO.md  GRAPH_LANGUAGE_NOTES.md  HTML_REPORTS.md  INSIGHT_ENGINE.md  INTAKE_PIPELINE.md  INTERACTIVE_TOPOLOGY_VIEWER.md  OPERATIONAL_MODEL.md  OPERATIONAL_PLANNER.md  PRODUCT_THESIS.md  PRODUCT_VISION.md  REPAIRGRAPH_SCHEMA_V0.md  REPAIR_STATE_MODEL.md  REVIEW_REPAIR.md  ROADMAP.md  SPATIAL_TOPOLOGY.md  STATE_API_CONTRACT.md  VISION.md  WORKFLOW_VISUALIZATION.md
schemas/: oem_standard_schema.json  repair_procedure.schema.json  vehicle_structure_schema.json
tests/: test_backward_compatibility.py  test_collision_adapter.py  test_compiler.py  test_decision_propagation.py  test_evidence.py  test_execution_package.py  test_executive_review.py  test_extractor.py  test_graph_export.py  test_graph_from_normalized.py  test_inference.py  test_intake_api.py  test_intake_classify.py  test_intake_cli.py  test_intake_diagnostics.py  test_intake_evidence.py  test_intake_metadata_voting.py  test_intake_report.py  test_intake_schema.py  test_intake_semantic_roles.py  test_intake_upload_page.py  test_mermaid_export.py  test_missing_operations.py  test_narrator.py  test_operational_model.py  test_operational_planner.py  test_qa_checklist.py  test_query.py  test_repair_plan.py  (+32 more)
(+159 files in other folders)
